--- a/_sass/my-inline.scss
+++ b/_sass/my-inline.scss
@@ -2,3 +2,11 @@
 .sidebar a {
   text-shadow: rgba(0, 0, 0, 0.25) 0.1rem 0.1rem 0.15rem;
 }
+
+hy-push-state a {
+  border-bottom: none;
+}
+
+hy-push-state a:hover {
+  color: lightgray;
+}
